--- a/packages/web/app/components/queue-control/queue-control-bar.module.css
+++ b/packages/web/app/components/queue-control/queue-control-bar.module.css
@@ -53,7 +53,7 @@
 
   .card {
     width: auto;
-    margin: 0 10px;
+    margin: 0 var(--spacing-3);
     border-radius: 4px;
     border-top: none;
     overflow: hidden;
